[package]
name = "ares"
version = "0.1.0"
edition = "2021"
authors = ["tims <0xtimsb@gmail.com>"]
description = "ares is tiny gui library for rust"
publish = false
license = "GPL-3.0"

[lib]
path = "src/ares.rs"

[features]
default = ["wayland"]
wayland = []

[dependencies]
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
calloop = "0.14.2"
calloop-wayland-source = "0.4.0"
anyhow = "1.0"
libc = "0.2.169"
memfd = "0.6.4"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
