[workspace]
resolver = "2"
members = [
    "crates/gpui",
    "crates/gpui_macros",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/semantic_version",
    "crates/util",
    "crates/util_macros",
]
default-members = ["crates/gpui"]

[workspace.package]
publish = false
edition = "2021"

[workspace.dependencies]

gpui = { path = "crates/gpui", default-features = false, features = [
    "http_client",
] }
gpui_macros = { path = "crates/gpui_macros" }
refineable = { path = "crates/refineable" }
semantic_version = { path = "crates/semantic_version" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# These are all of the rules that currently have violations in the Zed
# codebase.
#
# We'll want to drive this list down by either:
# 1. fixing violations of the rule and begin enforcing it
# 2. deciding we want to allow the rule permanently, at which point
#    we should codify that separately above.
#
# This list shouldn't be added to; it should only get shorter.
# =============================================================================

# There are a bunch of rules currently failing in the `style` group, so
# allow all of those, for now.
style = { level = "allow", priority = -1 }

# Temporary list of style lints that we've fixed so far.
module_inception = { level = "deny" }
question_mark = { level = "deny" }
redundant_closure = { level = "deny" }
# Individual rules that have violations in the codebase:
type_complexity = "allow"
# We often return trait objects from `new` functions.
new_ret_no_self = { level = "allow" }
# We have a few `next` functions that differ in lifetimes
# compared to Iterator::next. Yet, clippy complains about those.
should_implement_trait = { level = "allow" }
let_underscore_future = "allow"

[workspace.metadata.cargo-machete]
ignored = ["bindgen", "cbindgen", "prost_build", "serde"]
